# smartenough

./: .gitignore  LICENSE  README.org
buttonsmash/: Cargo.toml  code.yaml
buttonsmash/src/: bindings.rs  consts.rs  layers.rs  lib.rs  main.rs  microvm.rs  opcodes.rs
fdm_3dcad/: SSR_din_case.FCStd  universal-din-clip-v3-lower.FCStd
fdm_3dcad/project_boxes/: own-smarthome-box.scad  smartenough-esphome-box.scad  smartenough-power-hub.scad
hardware/io-board/: controlboard.kicad_prl  controlboard.kicad_pro  controlboard.kicad_sch
hardware/io-ctrl-board/: controlboard.kicad_pcb  controlboard.kicad_prl  controlboard.kicad_pro  controlboard.kicad_sch
hardware/mod_footprints.pretty/: MOD_weact_stm32g4.kicad_mod
hardware/power-hub/: fp-info-cache  power-hub.kicad_pcb  power-hub.kicad_prl  power-hub.kicad_pro  power-hub.kicad_sch
hardware/uniboard-esphome/: design-block-lib-table  fp-info-cache  fp-lib-table  sym-lib-table  uniboard.kicad_pcb  uniboard.kicad_prl  uniboard.kicad_pro  uniboard.kicad_sch
hardware/uniboard-esphome/s2mini.pretty/: RF_Module.kicad_sym  WEMOS_S2_mini.kicad_mod
io-gate/: Cargo.toml  README.md  config.yaml
io-gate/src/: comm.rs  config.rs  consts.rs  lib.rs  main.rs  message.rs
io-gate/src/homeassistant/: connection.rs  discovery.rs  message.rs  mod.rs
media/: deployment-diagram.dia
