[package]
name = "io-gate"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["rt", "macros", "rt-multi-thread", "io-util", "time", "sync"] }
tokio-serial = "5.4"
clap = { version = "4.5", features = ["derive"] }
clap_derive = { version = "4.5" }
anyhow = { version = "1" }
rumqttc = { version = "0.24.0" }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["chrono"] }
# time = { version = "0.3" }
chrono = { version = "0.4" }
